--- a/package.json
+++ b/package.json
@@ -9,7 +9,11 @@
     "test:e2e": "vue-cli-service test:e2e"
   },
   "dependencies": {
+    "@quasar/extras": "^1.0.0",
+    "axios": "^0.21.1",
+    "quasar": "^1.0.0",
     "vue": "^2.6.11",
+    "vue-axios": "^3.2.4",
     "vue-router": "^3.2.0"
   },
   "devDependencies": {
@@ -19,8 +23,11 @@
     "@vue/cli-service": "~4.5.0",
     "@vue/test-utils": "^1.0.3",
     "chai": "^4.1.2",
+    "node-sass": "^4.13.0",
+    "postcss-rtl": "^1.2.3",
     "sass": "^1.26.5",
     "sass-loader": "^8.0.2",
+    "vue-cli-plugin-quasar": "~3.0.2",
     "vue-template-compiler": "^2.6.11"
   }
 }
