--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "axios": "^0.21.1",
+    "firebase": "^8.6.3",
     "quasar": "^1.0.0",
     "vue": "^2.6.11",
     "vue-axios": "^3.2.4",
