--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,11 @@
 .DS_Store
 node_modules
 /dist
+info.txt
 
 /tests/e2e/videos/
 /tests/e2e/screenshots/
+
 
 
 # local env files
@@ -24,3 +26,4 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+info.txt
