--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,4 +12,6 @@ jobs:
         username: 'stefanjepsen'
         reponame: 'dev-env-prototype'
         token: ${{ secrets.GITHUB_TOKEN }} # Leave this line unchanged
-    
+    - run: |
+            npm run test:e2e
+            npm run test:unit
