--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -12,3 +12,15 @@ jobs:
         username: 'stefanjepsen'
         reponame: 'dev-env-prototype'
         token: ${{ secrets.GITHUB_TOKEN }} # Leave this line unchanged
+  cypress-run:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      # Install NPM dependencies, cache them correctly
+      # and run all Cypress tests
+      - name: Cypress run
+        uses: cypress-io/github-action@v2
+        with:
+          build: npm run build
+          start: npm run test:e2e
