--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,4 +24,15 @@ jobs:
         with:
           build: npm run build
           start: npm run test:e2e
-                 npm run test:unit
+    UnitTest:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+      # Install NPM dependencies, cache them correctly
+      # and run all Cypress tests
+      - name: UnitTest
+        uses: cypress-io/github-action@v2
+        with:
+          build: npm run build
+          start: npm run test:unit
