--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -24,11 +24,22 @@ jobs:
         with:
           build: npm run build
           start: npm run test:e2e
-  unit-test:
+  test:
+    name: Test
     runs-on: ubuntu-latest
+
+    strategy:
+      matrix:
+        node-version: [10.x, 12.x, 14.x]
+    
     steps:
-      - name: test
+      - name: Checkout
         uses: actions/checkout@v2
         with:
-          build: npm run build
-          start: npm run test:unit        
+          fetch-depth: 0
+
+      
+      - name: NPM install, build and test
+        run: |
+          npm run build
+          npm run test:unit   
